Produktuak eginda baina gehitzekoa falta

--- a/2taldea.csproj
+++ b/2taldea.csproj
@@ -11,10 +11,14 @@
 
   <ItemGroup>
     <None Remove="login.hbm.xml" />
+    <None Remove="produktua.hbm.xml" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="login.hbm.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="produktua.hbm.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
