--- a/App.config
+++ b/App.config
@@ -12,7 +12,7 @@
 			<!-- Configuración de conexión -->
 			<property name="connection.driver_class">NHibernate.Driver.MySqlDataDriver</property>
 			<property name="connection.connection_string">
-				Server=localhost;Port=3306;Database=2taldea;User Id=root;Password=1WMG2023;Old Guids=True;
+				Server=192.168.115.158;Port=3306;Database=2taldea;User Id=2Taldea;Password=2Taldea;Old Guids=True;
 			</property>
 
 			<!-- Dialecto de MySQL -->
