--- a/App.config
+++ b/App.config
@@ -4,7 +4,7 @@
 		<!-- Configuración de la sección de NHibernate -->
 		<section name="hibernate-configuration"
 				 type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate"/>
-	</configSections>
+	</configSections>	
 
 	<!-- Configuración de NHibernate -->
 	<hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
@@ -12,7 +12,7 @@
 			<!-- Configuración de conexión -->
 			<property name="connection.driver_class">NHibernate.Driver.MySqlDataDriver</property>
 			<property name="connection.connection_string">
-				Server=localhost;Port=3306;Database=2taldea;User Id=root;Password=1WMG2023;Old Guids=True;
+				Server=192.168.115.154;Port=3307;Database=3taldea;User Id=3taldea;Password=2Erronka;
 			</property>
 
 			<!-- Dialecto de MySQL -->
